--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@astrojs/react": "^3.0.7",
     "@astrojs/tailwind": "^5.0.3",
+    "@fontsource-variable/nunito": "^5.0.17",
     "astro": "^4.0.5",
     "astro-icon": "^0.8.1",
+    "flowbite": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
+    "daisyui": "^4.6.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.4"
   }
