--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64",
     "daisyui": "^4.6.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.4"
